# Stm32NetXHttpWebClient

./: .gitmodules  README.md
examples/TestAPI/: .gitignore  Dockerfile  README.md  TestAPI Test.http
examples/TestAPI/html/: out.txt  post.php  timestamp.php
examples/TestAPI/html/terminal/: info.php
examples/nucleo-f429zi/: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  nucleo-f429zi.ioc
examples/nucleo-f429zi/Application/: HardFaultHandler.cpp  HardFaultHandler.hpp  defines.h  globals.cpp  globals.h  globals.hpp  libsmart_config.hpp  main.cpp  main.hpp  setupMainThread.hpp
examples/nucleo-f429zi/Application/Command/: Info.hpp  RegisterCommands.hpp  Set.hpp  Test.hpp
examples/nucleo-f429zi/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
examples/nucleo-f429zi/Core/Src/: eth.c  main.c  stm32f4xx_it.c  usart.c
examples/nucleo-f429zi/Lib/lwjson/: CHANGELOG.md  CMakeLists.txt
examples/nucleo-f429zi/Lib/lwjson/lwjson/: library.cmake
examples/nucleo-f429zi/NetXDuo/App/: app_netxduo.c  nx_secure_user.h  nx_user.h
src/: BaseClient.cpp  BaseClient.hpp  Client.cpp  Client.hpp  Request.cpp  Request.hpp  RequestMethods.hpp  Stm32NetXHttpWebClient.cpp  Stm32NetXHttpWebClient.hpp  libsmart_config.dist.hpp  main.h
